--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,14 +13,14 @@ baseurl = "/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "xun Zhang@ISEP"
 
 ############################
 ## Advanced options below ##
 ############################
 
 # Name of Academic theme folder in `themes/`.
-theme = "academic"
+theme = "Minimal"
 
 # Get last modified date for content from Git?
 enableGitInfo = false
