--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,6 +9,11 @@
   weight = 10
 
 [[main]]
+  name = "CV"
+  url = "#CV"
+  weight = 10
+  
+[[main]]
   name = "Posts"
   url = "#posts"
   weight = 20
